--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@prisma/client": "^7.3.0",
     "next": "16.1.4",
+    "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
