--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "svix": "^1.84.1",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
